--- a/_pages/podcast-episodes/ep-026.md
+++ b/_pages/podcast-episodes/ep-026.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/026
 title: "Guest James Wynne"
 subtitle: "James and I talk about Ops Fire drills and exercises"
-label: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/detail/contact-info/ | The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
+label: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic.  <br> <br> <a href='mailto:jawynne@gmail.com' target='_blank'>jawynne@gmail.com</a> <br> <a href='https://www.linkedin.com/in/jawynne/' target='_blank'>https://www.linkedin.com/in/jawynne/</a> <br> The Dungeons and Dragons talk is <a href='https://www.youtube.com/watch?v=WmizLzszopw' target='_blank'>https://www.youtube.com/watch?v=WmizLzszopw</a>"
 date: Fri, 12 Apr 2019 04:20:54 GMT
 duration: "57:53"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/026-James-Wynne.mp3
