--- a/_pages/podcast-episodes/ep-028.md
+++ b/_pages/podcast-episodes/ep-028.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/028
 title: "Guest Allen Wixted"
 subtitle: "Allen is the founder of an Augmented Reality company"
-label: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes. https://www.linkedin.com/in/allen-wixted-6638a7b6/ | https://www.instagram.com/allenwixted/"
+label: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes.  <br> <br> <a href='https://www.linkedin.com/in/allen-wixted-6638a7b6/' target='_blank'>https://www.linkedin.com/in/allen-wixted-6638a7b6/</a> <br> <a href='https://www.instagram.com/allenwixted/' target='_blank'>https://www.instagram.com/allenwixted/</a>"
 date: Mon, 15 Apr 2019 04:20:54 GMT
 duration: "45:44"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/028-Allen-Wixted.mp3
