--- a/_pages/podcast-episodes/ep-029.md
+++ b/_pages/podcast-episodes/ep-029.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/029
 title: "Guest John Doran"
 subtitle: "John is the Director Of Engineering at Phorest Salon Software, speaker, and co-organiser of Ship-It-Con 2019 in Dublin Ireland "
-label: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" https://twitter.com/johnwildoran | https://shipitcon.com/ | https://nothingventured.rocks/ | https://www.phorest.com/careers/"
+label: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" <br> <br><a href='https://twitter.com/johnwildoran' target='_blank'>https://twitter.com/johnwildoran</a> <br> <a href='https://shipitcon.com/' target='_blank'>https://shipitcon.com/</a> <br> <a href='https://nothingventured.rocks/' target='_blank'>https://nothingventured.rocks/</a> <br> <a href='https://www.phorest.com/careers/' target='_blank'>https://www.phorest.com/careers/</a>"
 date: Wed, 08 May 2019 04:20:54 GMT
 duration: "42:24"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/029-John-Doran.mp3
