--- a/_pages/podcast-episodes/ep-030.md
+++ b/_pages/podcast-episodes/ep-030.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/030
 title: "Guest Davy Engone"
 subtitle: "Davy is the founder and Head of Engineering at Hackages"
-label: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy. | https://hackages.io/ | https://hackflix.dev/ | https://twitter.com/davyengone"
+label: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy.  <br> <a href='https://hackages.io/' target='_blank'>https://hackages.io/</a> <br> <a href='https://hackflix.dev/' target='_blank'>https://hackflix.dev/</a> <br> <a href='https://twitter.com/davyengone' target='_blank'>https://twitter.com/davyengone</a>"
 date: Wed, 29 May 2019 04:20:54 GMT
 duration: "01:03:51"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/030-Davy-Engone.mp3
