--- a/_pages/podcast-episodes/ep-032.md
+++ b/_pages/podcast-episodes/ep-032.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/032
 title: "What do you know about design sprints?"
 subtitle: "Guest Rohan Perera talks with me about design sprints, and lean thinking"
-label: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking. | https://www.linkedin.com/in/rohan-perera/ | https://leandisruptor.com/ | rohan@leandisruptor.com | https://twitter.com/Rohan_LD"
+label: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking.  <br> <br> <a href='https://www.linkedin.com/in/rohan-perera/' target='_blank'>https://www.linkedin.com/in/rohan-perera/</a> <br> <a href='https://leandisruptor.com/' target='_blank'>https://leandisruptor.com/</a> <br> <a href='mailto:rohan@leandisruptor.com' target='_blank'>rohan@leandisruptor.com</a> <br> <a href='https://twitter.com/Rohan_LD' target='_blank'>https://twitter.com/Rohan_LD</a>"
 date: Tue, 09 Jul 2019 04:20:54 GMT
 duration: "01:02:33"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/032-Rohan-Perera.mp3
