--- a/_pages/podcast-episodes/ep-033.md
+++ b/_pages/podcast-episodes/ep-033.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/033
 title: "Diversity and Inclusion Manifesto - It's like the Agile Manifesto, but for humans."
 subtitle: "Guest Tom Shaw discussing the Diversity and Inclusion Manifesto"
-label: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto | https://diversitymanifesto.org | https://twitter.com/tomwillfixit | https://www.linkedin.com/in/tomwillfixit/ "
+label: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto <br> <br> <a href='https://diversitymanifesto.org' target='_blank'>https://diversitymanifesto.org</a> <br> <a href='https://twitter.com/tomwillfixit' target='_blank'>https://twitter.com/tomwillfixit</a> <br> <a href='https://www.linkedin.com/in/tomwillfixit/' target='_blank'>https://www.linkedin.com/in/tomwillfixit/</a>"
 date: Tue, 15 Jul 2019 04:20:54 GMT
 duration: "00:30:32"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/033-Tom-Shaw.mp3
