--- a/_pages/podcast-episodes/ep-031.md
+++ b/_pages/podcast-episodes/ep-031.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/031
 title: "How can a business coach help you succeed with Mary Carroll"
 subtitle: "Guest Mary Carroll"
-label: "Mary and I talk about business coaching and Emotional Intelligence (EQI) | http://idetermine.ie/ | info@idetermine.ie | https://twitter.com/i_determine"
+label: "Mary and I talk about business coaching and Emotional Intelligence (EQI) <br> <a href='http://idetermine.ie/' target='_blank'>http://idetermine.ie/</a> <br> <a href='mailto:info@idetermine.ie' target='_blank'>info@idetermine.ie</a> <br> <a href='https://twitter.com/i_determine' target='_blank'>https://twitter.com/i_determine</a>"
 date: Tue, 02 Jul 2019 04:20:54 GMT
 duration: "00:39:10"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/031-Mary-Carroll.mp3
