--- a/_pages/podcast-episodes/ep-011.md
+++ b/_pages/podcast-episodes/ep-011.md
@@ -4,7 +4,7 @@ permalink: /podcast/episode/011
 image: /images/guests/Jake-Cahill.png
 title: "Guest Jake Cahill | Web Scrapping Automation Bots and AI"
 subtitle: "Is web scrapping ethical, how can it go wrong?"
-label: "Jake and I discuss technology using in web scrapping and scrapping prevention using AI/ML | https://twitter.com/tech_ccs | https://www.linkedin.com/in/jake-cahill-maine/ | https://www.ccstechme.com/ | https://dev.to/kaelscion"
+label: "Jake and I discuss technology using in web scrapping and scrapping prevention using AI/ML <br> <br> <a href='https://twitter.com/tech_ccs' target='_blank'>https://twitter.com/tech_ccs</a> <br> <a href='https://www.linkedin.com/in/jake-cahill-maine/' target='_blank'>https://www.linkedin.com/in/jake-cahill-maine/</a> <br> <a href='https://www.ccstechme.com/' target='_blank'>https://www.ccstechme.com/</a> <br> <a href='https://dev.to/kaelscion' target='_blank'>https://dev.to/kaelscion</a>"
 date: Thu, 23 Nov 2018 04:30:54 GMT
 duration: "51:24"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/011-Jake-Cahill.mp3
