--- a/_pages/podcast-episodes/ep-013.md
+++ b/_pages/podcast-episodes/ep-013.md
@@ -4,7 +4,7 @@ permalink: /podcast/episode/013
 image: /images/guests/Dave-Denham.jpg
 title: "Guest Dave Denham | Agile, Lean, Scrum, Kanban"
 subtitle: "What is a conference MVP?"
-label: "Dave Denham and I discuss building software using Agile, Lean, Scrum, and the Agile Lean Ireland conference | https://twitter.com/cobrakaiagile | https://www.linkedin.com/in/ddenham/ | https://www.agileleanireland.org/ | https://twitter.com/AgileLeanIrl"
+label: "Dave Denham and I discuss building software using Agile, Lean, Scrum, and the Agile Lean Ireland conference <br> <br><a href='https://twitter.com/cobrakaiagile' target='_blank'>https://twitter.com/cobrakaiagile</a> <br><a href='https://www.linkedin.com/in/ddenham/' target='_blank'>https://www.linkedin.com/in/ddenham/</a> <br><a href='https://www.agileleanireland.org/' target='_blank'>https://www.agileleanireland.org/</a> <br><a href='https://twitter.com/AgileLeanIrl' target='_blank'>https://twitter.com/AgileLeanIrl</a>"
 date: Mon, 24 Nov 2018 04:30:54 GMT
 duration: "1:06:26"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/013-Dave-Denham.mp3
