--- a/_pages/podcast-episodes/ep-015.md
+++ b/_pages/podcast-episodes/ep-015.md
@@ -4,7 +4,7 @@ permalink: /podcast/episode/015
 image: /images/guests/Alan-Costell.jpg
 title: "Guest Alan Costell | NDRC Venture Investment Leader (VIL) of Medit and many more startups"
 subtitle: "Alan and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success"
-label: "Alan Costello an NDRC Venture Investment Leader (VIL) of Medit and many more startups and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success | https://www.linkedin.com/in/alanjcostello/ | https://twitter.com/alanjcostello | https://www.ndrc.ie/ |https://twitter.com/ndrc_hq "
+label: "Alan Costello an NDRC Venture Investment Leader (VIL) of Medit and many more startups and I discuss being prepared to apply for an accelerator programme, and many other elements for a startup's success<br> <br> <a href='https://www.linkedin.com/in/alanjcostello/' target='_blank'>https://www.linkedin.com/in/alanjcostello/</a> <br> <a href='https://twitter.com/alanjcostello' target='_blank'>https://twitter.com/alanjcostello</a> <br> <a href='https://www.ndrc.ie/' target='_blank'>https://www.ndrc.ie/</a> <br><a href='https://twitter.com/ndrc_hq' target='_blank'>https://twitter.com/ndrc_hq</a>"
 date: Mon, 3 Dec 2018 04:30:54 GMT
 duration: "1:00:58"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/015-Alan-Costello.mp3
