--- a/_pages/podcast-episodes/ep-019.md
+++ b/_pages/podcast-episodes/ep-019.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/019
 title: "Thoughts from a meetup on Agile Leadership"
 subtitle: "This Quick Take turned into a full episode"
-label: "I went to a meetup on Leadership and Agile and there were a few slides I found interesting, the more I talked about them the deeper I went.  Some really interesting point on making sure you and your agile team are doing the right things. The event was at: https://www.meetup.com/Dublin-Tech-Talks/events/255963191/ | Max: https://www.linkedin.com/in/maxcottica/ | Helen: https://www.linkedin.com/in/helen-duffy-a49b97a/"
+label: "I went to a meetup on Leadership and Agile and there were a few slides I found interesting, the more I talked about them the deeper I went.  Some really interesting point on making sure you and your agile team are doing the right things. The event was at: <br> <br> <a href='https://www.meetup.com/Dublin-Tech-Talks/events/255963191/' target='_blank'>https://www.meetup.com/Dublin-Tech-Talks/events/255963191/</a> <br> Max: <a href='https://www.linkedin.com/in/maxcottica/' target='_blank'>https://www.linkedin.com/in/maxcottica/</a> <br> Helen: <a href='https://www.linkedin.com/in/helen-duffy-a49b97a/' target='_blank'>https://www.linkedin.com/in/helen-duffy-a49b97a/</a>"
 date: Fri, 25 Jan 2019 04:07:54 GMT
 duration: "26:34"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/019-Agile-Leadership.mp3
