--- a/_pages/podcast-episodes/ep-020.md
+++ b/_pages/podcast-episodes/ep-020.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/020
 title: "Guest Felipe Coelho Kussik "
 subtitle: "Medit's UX/UI Designer and User Advocate"
-label: "I sat down with Felipe to discuss UX/UI and doing the best for our users. Felipe on Twitter https://twitter.com/seufelipe and on Instagram https://www.instagram.com/seufelipe/"
+label: "I sat down with Felipe to discuss UX/UI and doing the best for our users.  <br> <br>Felipe on Twitter <a href='https://twitter.com/seufelipe' target='_blank'>https://twitter.com/seufelipe</a> and on Instagram <br> <a href='https://www.instagram.com/seufelipe/' target='_blank'>https://www.instagram.com/seufelipe/</a>"
 date: Fri, 1 Feb 2019 04:42:54 GMT
 duration: "45:19"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/020-Felipe-Coelho-Kussik.mp3
