--- a/_pages/podcast-episodes/ep-021.md
+++ b/_pages/podcast-episodes/ep-021.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/021
 title: "Guest Joe Morgan"
 subtitle: "I am joined by Joe Morgan a UI Developer, Speaker, Author, JavaScript enthusiast"
-label: "Joe Morgan is Founder and CoOrganizer of the Kansas City React Meetup, a UI developer, and the author of 'Simplifying JavaScript' https://pragprog.com/book/es6tips/simplifying-javascript | https://slate.com/human-interest/2018/12/against-teaching-kids-to-code-creativity-problem-solving.html | https://ponyfoo.com/ | https://twitter.com/joesmorgan | https://www.linkedin.com/in/joe-morgan-42458a15/ "
+label: "Joe Morgan is Founder and CoOrganizer of the Kansas City React Meetup, a UI developer, and the author of 'Simplifying JavaScript' <br><br><a href='https://pragprog.com/book/es6tips/simplifying-javascript' target='_blank'>https://pragprog.com/book/es6tips/simplifying-javascript</a> <br> <a href='https://slate.com/human-interest/2018/12/against-teaching-kids-to-code-creativity-problem-solving.html' target='_blank'>https://slate.com/human-interest/2018/12/against-teaching-kids-to-code-creativity-problem-solving.html</a> <br> <a href='https://ponyfoo.com/' target='_blank'>https://ponyfoo.com/</a> <br> <a href='https://twitter.com/joesmorgan' target='_blank'>https://twitter.com/joesmorgan</a> <br> <a href='https://www.linkedin.com/in/joe-morgan-42458a15/' target='_blank'>https://www.linkedin.com/in/joe-morgan-42458a15/</a>"
 date: Mon, 11 Mar 2019 04:20:54 GMT
 duration: "48:14"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/021-joe-morgan.mp3
