--- a/_pages/podcast-episodes/ep-022.md
+++ b/_pages/podcast-episodes/ep-022.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/022
 title: "Guest Lewis Denham-Parry"
 subtitle: "Lewis Denham-Parry Co-founder of Cloud Native Wales joins me to talk about mental health in technology"
-label: "Find out the parallels of mental health to monoliths versus microservices! You can find Lewis here: https://twitter.com/denhamparry | https://denhamparry.co.uk/ | https://www.linkedin.com/in/denhamparry/"
+label: "Find out the parallels of mental health to monoliths versus microservices! You can find Lewis here: <br> <br> <a href='https://twitter.com/denhamparry' target='_blank'>https://twitter.com/denhamparry</a> <br> <a href='https://denhamparry.co.uk/' target='_blank'>https://denhamparry.co.uk/</a> <br> <a href='https://www.linkedin.com/in/denhamparry/' target='_blank'>https://www.linkedin.com/in/denhamparry/</a>"
 date: Tue, 12 Mar 2019 04:20:54 GMT
 duration: "54:48"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/022-lewis-denham-parry.mp3
