--- a/_pages/podcast-episodes/ep-023.md
+++ b/_pages/podcast-episodes/ep-023.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/023
 title: "Guest Angela Duffy"
 subtitle: "I am joind by Angela Duffy a Venture Investment Leader (VIL) of the NDRC"
-label: "Angela and I discuss the what's involved in mentoring a startup, some things to do and some things to avoid as a startup to make the journey better.  angela.duffy@ndrc.ie | https://www.linkedin.com/in/angeladuffy1/ | https://twitter.com/_angela_duffy "
+label: "Angela and I discuss the what's involved in mentoring a startup, some things to do and some things to avoid as a startup to make the journey better.  <br> angela.duffy@ndrc.ie <br> <br> <a href='https://www.linkedin.com/in/angeladuffy1/' target='_blank'>https://www.linkedin.com/in/angeladuffy1/</a> <br> <a href='https://twitter.com/_angela_duffy' target='_blank'>https://twitter.com/_angela_duffy</a>"
 date: Mon, 12 Mar 2019 04:20:54 GMT
 duration: "56:59"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/023-angela-duffy.mp3
