--- a/_pages/podcast-episodes/ep-025.md
+++ b/_pages/podcast-episodes/ep-025.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/025
 title: "Guest Adam Coulon"
 subtitle: "I am joined by Adam Coulon the CTO and Co-founder of WiGo Trips"
-label: "In this episode I get to talk to Adam about travel, working in a bootstrapped startup, and hear a few amazing perls of wisdom about life in general.  | adam@wigotrips.com | https://www.linkedin.com/in/adam-coulon-a38963135/ | https://twitter.com/FooBarKing"
+label: "In this episode I get to talk to Adam about travel, working in a bootstrapped startup, and hear a few amazing perls of wisdom about life in general.  <br> <br> <a href='mailto:adam@wigotrips.com' target='_blank'>adam@wigotrips.com</a> <br> <a href='https://www.linkedin.com/in/adam-coulon-a38963135/' target='_blank'>https://www.linkedin.com/in/adam-coulon-a38963135/</a> <br> <a href='https://twitter.com/FooBarKing' target='_blank'>https://twitter.com/FooBarKing</a>"
 date: Thu, 28 Mar 2019 04:20:54 GMT
 duration: "59:08"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/025-adam-coulon.mp3
