--- a/_pages/podcast-episodes/ep-012.md
+++ b/_pages/podcast-episodes/ep-012.md
@@ -4,7 +4,7 @@ permalink: /podcast/episode/012
 image: /images/guests/Ed-Burke.jpg
 title: "Guest Ed Burke | Starting up without a CTO"
 subtitle: "Starting without a CTO and using Facebook groups to validate a startup idea"
-label: "Ed Burke of CEO and founder of RooMigo and I discuss starting up without a CTO, and using Facebook groups to validate a startup idea. | </br /> ed@roomigo.io | https://roomigo.io/ | https://www.linkedin.com/in/ed-burke/ | https://www.linkedin.com/company/roomigo/ | https://twitter.com/BurkeyEd | https://twitter.com/roomigohq"
+label: "Ed Burke of CEO and founder of RooMigo and I discuss starting up without a CTO, and using Facebook groups to validate a startup idea. <br> <br><a href='mailto:ed@roomigo.io' target='_blank'>ed@roomigo.io</a> <br><a href='https://roomigo.io/' target='_blank'>https://roomigo.io/</a> <br><a href='https://www.linkedin.com/in/ed-burke/' target='_blank'>https://www.linkedin.com/in/ed-burke/</a> <br><a href='https://www.linkedin.com/company/roomigo/' target='_blank'>https://www.linkedin.com/company/roomigo/</a> <br> <br><a href='https://twitter.com/BurkeyEd' target='_blank'>https://twitter.com/BurkeyEd</a> <br><a href='https://twitter.com/roomigohq' target='_blank'>https://twitter.com/roomigohq</a>"
 date: Sun, 24 Nov 2018 04:30:54 GMT
 duration: "41:12"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/012-Ed-Burke.mp3
