--- a/_pages/podcast-episodes/ep-014.md
+++ b/_pages/podcast-episodes/ep-014.md
@@ -4,7 +4,7 @@ permalink: /podcast/episode/014
 image: /images/guests/Will-Youmans.jpg
 title: "Guest Will Youmans | No CTO, no problem ... sort of"
 subtitle: "Starting a tech product before you have a CTO and the transition using an interm CTOs"
-label: "Will Youmans founder of Forefront Software and CTO Sumo and I discuss how he helps founders without a CTO transition to having one with his new private Beta service CTO Sumo | https://twitter.com/wyoumansdev | https://www.linkedin.com/in/williamyoumans/ | https://www.forefrontsoftware.com/ | https://www.ctosumo.com/ "
+label: "Will Youmans founder of Forefront Software and CTO Sumo and I discuss how he helps founders without a CTO transition to having one with his new private Beta service CTO Sumo <br> <br> <a href='https://twitter.com/wyoumansdev' target='_blank'>https://twitter.com/wyoumansdev</a> <br> <a href='https://www.linkedin.com/in/williamyoumans/' target='_blank'>https://www.linkedin.com/in/williamyoumans/</a> <br> <a href='https://www.forefrontsoftware.com/' target='_blank'>https://www.forefrontsoftware.com/</a> <br> <a href='https://www.ctosumo.com/' target='_blank'>https://www.ctosumo.com/</a>"
 date: Mon, 30 Nov 2018 04:30:54 GMT
 duration: "46:37"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/014-Will-Youmans-auphonic.mp3
